# BRLCADVisualizer

./: .gitignore  CMakeLists.txt  Contributing.md  LICENSE  README.md  TODO  build.sh
.github/workflows/: ci.yml
QtOsprayViewer/QtOsprayViewer/: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  interactioncontroller.cpp  interactioncontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  ospraybackend.cpp  ospraybackend.h  package_ibrt_release.ps1  qualitysettings.cpp  qualitysettings.h  renderreplaylogic.cpp  renderreplaylogic.h  renderwidget.cpp  renderwidget.h  renderworkerclient.cpp  renderworkerclient.h  renderworkerqueuelogic.cpp  renderworkerqueuelogic.h  renderworkflowlogic.cpp  renderworkflowlogic.h  tests_ibrt.cpp  worker_ipc.cpp  worker_ipc.h  worker_main.cpp
QtOsprayViewer/QtOsprayViewer/build-clean/: IBRT.sln
apps/: CMakeLists.txt
apps/common/: CMakeLists.txt
apps/common/arcball_camera/: ArcballCamera.cpp  ArcballCamera.h  CMakeLists.txt
apps/common/ospray_testing/: CMakeLists.txt  ospray_testing.cpp  ospray_testing.h
apps/common/raw_to_amr/: CMakeLists.txt  rawToAMR.cpp  rawToAMR.h
apps/ospBenchmark/: BaseFixture.cpp  BaseFixture.h  CMakeLists.txt  ospBenchmark.cpp
apps/ospBenchmark/benchmarks/: BoxesAo.cpp  ClippingGeometries.cpp  CornellBoxSpp.cpp  GravitySpheresVolume.cpp  PerlinNoiseVolumes.cpp  Simple.cpp
apps/ospExamples/: CMakeLists.txt  GLFWOSPRayWindow.cpp  GLFWOSPRayWindow.h  example_common.h  ospExample.cpp
apps/ospTestSuite/: CMakeLists.txt  environment.cpp  environment.h  ospTestSuite.cpp  test_appearance.cpp  test_appearance.h  test_assigned_data.cpp  test_camera.cpp  test_enums.cpp  test_fixture.cpp  test_fixture.h  test_framebuffer.cpp  test_geometry.cpp  test_geometry.h  test_glm_compat.cpp  test_imageop.cpp  test_interpolation.cpp  test_light.cpp  test_light.h  test_motionblur.cpp  test_shadowcatcher.cpp  test_sharedusm_data.cpp  test_tools.cpp  test_tools.h  test_volumetric.cpp  test_volumetric.h
apps/ospTutorial/: CMakeLists.txt  ospTutorial.cpp  ospTutorialGLM.cpp
apps/ospTutorial/ospTutorialFindospray/: CMakeLists.txt
apps/utility/: CMakeLists.txt  ospConvertRawToAMR.cpp
brl_cad_standalone/: CMakeLists.txt
brl_cad_standalone/build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile__.._modules_pluggableGeometryExample_brl_cad_module_geometry_brlcad.ispc.vcxproj  compile__.._modules_pluggableGeometryExample_brl_cad_module_geometry_brlcad.ispc.vcxproj.filters  ospray_module_brl_cad.sln  ospray_module_brl_cad.vcxproj  ospray_module_brl_cad.vcxproj.filters
brl_cad_standalone/build-win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
brl_cad_standalone/build-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
bw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile__.._modules_pluggableGeometryExample_brl_cad_module_geometry_brlcad.ispc.vcxproj  compile__.._modules_pluggableGeometryExample_brl_cad_module_geometry_brlcad.ispc.vcxproj.filters  ospray_module_brl_cad.sln  ospray_module_brl_cad.vcxproj  ospray_module_brl_cad.vcxproj.filters
bw/Release/: ospray_module_brl_cad.exp  ospray_module_brl_cad.lib
bw/ospray_module_brl_cad.dir/Release/: ospray_module_brl_cad.dll.recipe
cmake/: clang-format.cmake  ospray_cmake_config.cmake  ospray_macros.cmake  ospray_options.cmake  ospray_redistribute_deps.cmake  ospray_version.cmake  package.cmake
cmake/compiler/: clang.cmake  dpcpp.cmake  gcc.cmake  icc.cmake  ispc.cmake  msvc.cmake
docs/perf/: ibrt-moss-performance-plan.md
modules/cpu/: CMakeLists.txt  ISPCDevice.cpp  ISPCDevice.h  ISPCDevice.ispc  ISPCDeviceObject.h  ModuleInit.cpp  ispc_tasksys.cpp
modules/cpu/camera/: Camera.cpp  Camera.h  Camera.ih  CameraDispatch.ih  CameraDispatch.ispc  CameraShared.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCamera.ih  OrthographicCamera.ispc  OrthographicCameraShared.h  PanoramicCamera.cpp  PanoramicCamera.h  PanoramicCamera.ih  PanoramicCamera.ispc  PanoramicCameraShared.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCamera.ih  PerspectiveCamera.ispc  PerspectiveCameraShared.h  registration.cpp  registration.h
modules/cpu/common/: Clipping.ih  DGEnum.h  Data.cpp  Data.h  Data.ih  DeviceRT.ih  DeviceRTImpl.h  DeviceRTImpl_ispc.cpp  DeviceRTImpl_ispc.h  DeviceRTImpl_sycl.cpp  DeviceRTImpl_sycl.h  DifferentialGeometry.ih  Embree.h  FeatureFlags.ih  FeatureFlagsEnum.h  FilterIntersect.ih  Future.cpp  Future.h  Group.cpp  Group.h  GroupShared.h  Instance.cpp  (+17 more)
modules/denoiser/: CMakeLists.txt  DenoiseFrameOp.cpp  DenoiseFrameOp.h  ModuleInit.cpp
modules/mpi/: CMakeLists.txt
modules/mpi/testing/: CMakeLists.txt  distributed_test_fixture.cpp  distributed_test_fixture.h  ospMPIDistribTestSuite.cpp
modules/multiDevice/: CMakeLists.txt  MultiDevice.cpp  MultiDevice.h  MultiDeviceFrameBuffer.h  MultiDeviceLoadBalancer.cpp  MultiDeviceLoadBalancer.h  MultiDeviceModuleInit.cpp  MultiDeviceObject.h  MultiDeviceRenderTask.h
modules/pluggableGeometryExample/: CMakeLists.txt
modules/pluggableGeometryExample/brl_cad_module/: CMakeLists.txt  moduleInit.cpp
modules/pluggableGeometryExample/brl_cad_module/geometry/: BRLCADShared.h  brlcad.cpp  brlcad.h  brlcad.ispc
modules/pluggableGeometryExample/ospray/: CMakeLists.txt  moduleInit.cpp
modules/pluggableGeometryExample/ospray/geometry/: BilinearPatches.cpp  BilinearPatches.h  BilinearPatches.ispc  BilinearPatchesShared.h
ospray/: CMakeLists.txt
ospray/api/: API.cpp  Device.cpp  Device.h  ospray_cpp_defs.cpp  ospray_util_impl.cpp
ospray/common/: DeviceRT.h  ISPCMessages.h  Library.h  Managed.cpp  Managed.h  OSPCommon.cpp  OSPCommon.h  ObjectFactory.h
ospray/fb/: FrameBufferView.h  FrameBufferViewDef.h  ImageOp.cpp  ImageOp.h
scripts/superbuild/: CMakeLists.txt  build_ospray.cmake
test_image_data/: CMakeLists.txt
(+555 files in other folders)
